# proposition-A.I.

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  example_test_inputs.txt  notes.db  pyproject.toml
backend/: README.md  pyproject.toml
backend/src/propositionai/: config.py  gui.py  llm_note_taking.py  llm_query.py  search.py
backend/src/propositionai/prompts/: loader.py
backend/src/propositionai/prompts/note_taking/: proposition_generation.yaml  proposition_labeling.yaml
frontend/: explanation.md  package-lock.json  package.json
frontend/src/: bridge.js  main.js  preload.js
frontend/src/renderer/: index.html  renderer.js  styles.css
src/propositionai/: config.py  gui.py  llm_note_taking.py  llm_processor.py  main.py
src/propositionsai/: config.py  db.py  gui.py  llm-processor.py  llm_processor.py  llm_qa.py  main.py  search.py
